# yinsh_desktop_ui

./: CMakeLists.txt  README.md  main.cpp
